--- a/portfolio/overwatch.html
+++ b/portfolio/overwatch.html
@@ -40,55 +40,12 @@
         </header>
 			<nav>
 				<ul class="box-primary-nav">
-					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="https://linkedin.com/in/kateberg00" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
-						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Berg</li>
-					<li><a href="../resume.html">Resume</a></li>
-					<li><a href="../index.html#portfolio">Portfolio</a></li>
-					<table align="center">
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/birds.html">A Bird's Eye View Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/cheboygan.html">Cheboygan River Watershed Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/lathrup.html">Clearzoning! </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/commute.html">Communting Country </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/cad.html">Computer-Aided Design </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/johnsnow.html">Disease & Analyses </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/FMBQ.html">Field & Marine Biology Quarter </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/glansis.html">GLANSIS Mapping </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/heart.html">Home is Where the Heart is </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/direwolf.html">Injury Heat Mapping </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/pumpkins.html">Largest Harvests Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/marmots.html">Marmots Stress</a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/mp.html">Master's Project </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/hydro.html">Michigan Hydrology Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/overwatch.html">Overwatch League Regions Map </a><i class="ion-ios-circle-filled color"></i></li></th>
-						<tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/picturethis.html">Picture This </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/annarbortrees.html">Priority Tree Removal </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/pronghorn.html">Pronghorn Least Cost Analysis </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a></li></th>
-						</tr>
-						<tr>							
-							<th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
-						</tr>
-					</table>
+						<li><a href="../index.html">Home</a><a href="../index.html#portfolio">Portfolio</a><a href="../resume.html">Resume</a></li>
+					<li class="box-label">Let's Chat!</li>
+						<li class="box-social"><a href="mailto:bergkaten@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="https://linkedin.com/in/bergkaten" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 				</ul>
 			</nav>
     </div>
@@ -101,7 +58,7 @@
                 <div class="categories-grid wow fadeInLeft">
                     <nav class="categories text-center">
 						<h1>Overwatch League Team Map</h1>
-						<h2>Fall 2017</h2>
+						<h2>Fall 2017 & Winter 2018</h2>
                     </nav>
                 </div>
 			</div>
@@ -111,11 +68,9 @@
 	
 	<!-- main-container -->
 	<div class="container main-container">
-        <a href="../img/Full/overwatchfull.png" target="_blank"><img src="../img/Full/overwatchfull.png" width="1100px"/></a>
 		<div class="col-md-9">
-            <h3>Using Thiessen Polygons, I found the regions where everywhere inside is closer to the <a href="https://overwatchleague.com/en-us/teams" target="_blank">Overwatch League Team</a> City than any other Team City.</h3>
+            <h3>The establishment of the Overwatch League was ground breaking for the eSports world in 2017. With the creation of initally 12 teams, and special viewings on ESPN and the Disney Channel, all that was left was to figure out the best team to route for. I, naturally, decided to approach this using GIS.</h3>
         </div>
-
         <div class="col-md-3">
 			<br><h4>Tools:</h4>
             <ul class="cat-ul">
@@ -126,7 +81,13 @@
             <ul class="cat-ul">
                 <li><i class="ion-ios-circle-filled"></i> <a href="https://overwatchleague.com/en-us/teams" target="_blank">Overwatch League Team Locations</a></li>
             </ul>
-        </div>
+		</div>
+		<div class="col-md-12">
+			<h4>Using Thiessen Polygons, I found the regions where everywhere inside is closer to the <a href="https://overwatchleague.com/en-us/teams" target="_blank">Overwatch League Team</a> City than any other Team City.</h4>
+			<br><a href="../img/Full/overwatchfull.png" target="_blank"><img src="../img/Full/overwatchfull.png" width="1100px"/></a>
+			<br><br><h4>And here it is updated for the additional teams updated in S2 (with modest support from <a href="https://www.reddit.com/r/OverwatchLeague/comments/a5ohqp/who_is_your_home_team_this_owl_season_2/" target="_blank">Reddit)</a>:</h4>
+			<a href="../img/Full/overwatchfull_s2.png" target="_blank"><img src="../img/Full/overwatchfull_s2.png" width="1100px"/></a>
+		</div>
     </div>
     <!-- end main-container -->
 
@@ -135,8 +96,8 @@
      <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="../index.html#portfolio">Portfolio</a> &#8226; <a href="../resume.html">Resume</a></h5>
-				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="https://linkedin.com/in/kateberg00" target="_blank"><i class="ion-social-linkedin"></i></a>  
+				<h5><a href="mailto:bergkaten@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<a href="https://linkedin.com/in/bergkaten" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
     </footer>
