--- a/index.html
+++ b/index.html
@@ -49,57 +49,14 @@
                 <span class="box-menu-text">Menu</span><span class="box-menu-icon"></span>
             </a>
         </header>
-			<nav>
+						<nav>
 				<ul class="box-primary-nav">
-					<li class="box-label">Let's Chat!</li>
-						<li class="box-social"><a href="mailto:kateberg00@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
-						<li class="box-social"><a href="https://linkedin.com/in/kateberg00" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
-						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 					<li class="box-label">Kate Berg</li>
-                    <li><a href="../resume.html">Resume</a></li>
-					<li><a href="../index.html#portfolio">Portfolio</a><i class="ion-ios-circle-filled color"></i></li>
-					<table align="center">
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/birds.html">A Bird's Eye View Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/cheboygan.html">Cheboygan River Watershed Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/lathrup.html">Clearzoning! </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/commute.html">Communting Country </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/cad.html">Computer-Aided Design </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/johnsnow.html">Disease & Analyses </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/FMBQ.html">Field & Marine Biology Quarter </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/glansis.html">GLANSIS Mapping </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/heart.html">Home is Where the Heart is </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/direwolf.html">Injury Heat Mapping </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/pumpkins.html">Largest Harvests Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/marmots.html">Marmots Stress</a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/mp.html">Master's Project </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/hydro.html">Michigan Hydrology Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/overwatch.html">Overwatch League Regions Map </a></li></th>
-						<tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/picturethis.html">Picture This </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/annarbortrees.html">Priority Tree Removal </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/pronghorn.html">Pronghorn Least Cost Analysis </a></li></th>
-						</tr>
-						<tr>
-							<th><li style="font-size:90%;"><a href="../portfolio/toolbox.html">Species Reintroduction Toolbox </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/wellbeing.html">State of American Wellbeing Map </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/oldportfolio.html">Story Map Portfolio </a></li></th>
-						</tr>
-						<tr>							
-                            <th><li style="font-size:90%;"><a href="../portfolio/nwf.html">Urban Wildlife Week </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/wildthings.html">Where the Wild Things Are Map  </a></li></th>
-							<th><li style="font-size:90%;"><a href="../portfolio/lakes.html">World's Largest Lakes </a></li></th>
-						</tr>
-					</table>
+						<li><a href="../index.html">Home</a><a href="../index.html#portfolio">Portfolio</a><a href="../resume.html">Resume</a></li>
+					<li class="box-label">Let's Chat!</li>
+						<li class="box-social"><a href="mailto:bergkaten@gmail.com" ><i class="ion-paper-airplane"></i></a></li>
+						<li class="box-social"><a href="https://linkedin.com/in/bergkaten" target="_blank"><i class="ion-social-linkedin" target="_blank"></i></a></li>
+						<li class="box-social"><a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter" target="_blank"></i></a></li>
 				</ul>
 			</nav>
     </div>
@@ -129,23 +86,23 @@
                 </div>
                 <!-- portfolio_filter -->
 
-                <!-- portfolio_container -->
+                <!-- Portfolio -->
                 <div class="no-padding portfolio_container clearfix">
-					<!-- oldportfolio -->
-                    <div class="col-md-4 col-sm-6 ads story">
-                            <a href="portfolio/oldportfolio.html" class="portfolio_item">
-                                <img src="img\Cover\oldport.png" alt="image" class="img-responsive" />
+					<!-- sig -->
+                    <div class="col-md-4 col-sm-6 ads cartography">
+                            <a href="portfolio/significantplaces.html" class="portfolio_item">
+                                <img src="img\significantplaces\Sig_Bran.png" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
-                                            <span>Original Story Map Portfolio</span>
-                                            <em>Story Map</em>
+                                            <span>Mappy Gifts</span>
+                                            <em>Cartography</em>
                                         </div>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                    <!-- End oldportfolio -->	
+                    <!-- End Sig -->	
 
 					
 					<!-- Dire Wolf -->
@@ -179,6 +136,7 @@
                         </a>
                     </div>
                     <!-- End Cheboygan -->
+                    
 					 <!-- MP -->
                      <div class="col-md-4 col-sm-6 ads public research story">
                             <a href="portfolio/mp.html" class="portfolio_item">
@@ -194,6 +152,22 @@
                             </a>
                         </div>
                     <!-- End MP -->	
+
+					<!-- oldportfolio -->
+                    <div class="col-md-4 col-sm-6 ads story">
+                            <a href="portfolio/oldportfolio.html" class="portfolio_item">
+                                <img src="img\Cover\oldport.png" alt="image" class="img-responsive" />
+                                <div class="portfolio_item_hover">
+                                    <div class="portfolio-border clearfix">
+                                        <div class="item_info">
+                                            <span>Original Story Map Portfolio</span>
+                                            <em>Story Map</em>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    <!-- End oldportfolio -->
 
                     <!-- GLANSIS -->
                     <div class="col-md-4 col-sm-6 spatial cartography">
@@ -529,8 +503,8 @@
      <footer>
         <div class="container-fluid">
             <h5 align="center"><a href="#portfolio">Portfolio</a> &#8226; <a href="resume.html">Resume</a></h5>
-				<h5><a href="mailto:kateberg00@gmail.com"><i class="ion-paper-airplane"></i></a>  
-				<a href="https://linkedin.com/in/kateberg00" target="_blank"><i class="ion-social-linkedin"></i></a>  
+				<h5><a href="mailto:bergkaten@gmail.com"><i class="ion-paper-airplane"></i></a>  
+				<a href="https://linkedin.com/in/bergkaten" target="_blank"><i class="ion-social-linkedin"></i></a>  
 				<a href="https://twitter.com/pokateo_" target="_blank"><i class="ion-social-twitter"></i></a></h5>
 		</div>
     </footer>
