Michigan Triangle Addition

--- a/index.html
+++ b/index.html
@@ -88,7 +88,24 @@
 
                 <!-- Portfolio -->
                 <div class="no-padding portfolio_container clearfix">
-					<!-- sig -->
+                    <!-- MITri -->
+                    <div class="col-md-4 col-sm-6 ads cartography">
+                        <a href="portfolio/MITri.html" class="portfolio_item">
+                            <img src="img/Cover/MITriangle.png" alt="image" class="img-responsive" />
+                            <div class="portfolio_item_hover">
+                                <div class="portfolio-border clearfix">
+                                    <div class="item_info">
+                                        <span>Lake Michigan Triangle</span>
+                                        <em>Cartography</em>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- End MiTri -->
+
+
+                    <!-- sig -->
                     <div class="col-md-4 col-sm-6 ads cartography">
                             <a href="portfolio/significantplaces.html" class="portfolio_item">
                                 <img src="img/Cover/Sig_Bran.png" alt="image" class="img-responsive" />
