--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <!-- sig -->
                     <div class="col-md-4 col-sm-6 ads cartography">
                             <a href="portfolio/significantplaces.html" class="portfolio_item">
-                                <img src="img/Cover/Sig_Bran.png" alt="image" class="img-responsive" />
+                                <img src="img/Cover/Sig_Bran_map.png" alt="image" class="img-responsive" />
                                 <div class="portfolio_item_hover">
                                     <div class="portfolio-border clearfix">
                                         <div class="item_info">
